--- a/cards/card02.Rmd
+++ b/cards/card02.Rmd
@@ -10,6 +10,7 @@ output:
   html_document:
     theme: readable
 geometry: top=0cm,bottom=0cm,left=3cm
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -40,7 +41,7 @@ You reached the goal this month for the measure [postoperative nausea and vomiti
 
 ```{r figureA, echo=FALSE, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, "GOAL")
+  card_env_A$run(recipient, data, "Goal")
 ```
 
 \signoff
@@ -58,7 +59,7 @@ You reached the goal this month for the measure [postoperative nausea and vomiti
 
 ```{r figureB, echo=FALSE, fig.align='center', fig.width=4, fig.height=2, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data, "GOAL")
+  card_env_B$run(recipient, data, "Goal")
 ```
 
 \signoff
