--- a/cards/card11.Rmd
+++ b/cards/card11.Rmd
@@ -35,7 +35,7 @@ recipient <- 'p9'
 
 Dear Alex,
 
-You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
 \signoff
   
