--- a/cards/card07.Rmd
+++ b/cards/card07.Rmd
@@ -28,6 +28,20 @@ source(file='fig_one_bar.R', local=card_env_B)
 # Load data and define recipient
 data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p5'
+goal_rate <- 0.90
+
+# get most recent performance of performer
+filter <- data$id == recipient & data$time == max(data$time)
+numerator <- data[filter,'numer'][[1]]
+denominator <- data[filter,'denom'][[1]]
+performance_percent <- paste(round(numerator/denominator, 3)*100, "%", sep="")
+
+# Scale goal to observed denominator.  Truncate to single decimal place
+goal_percent <- paste(100*goal_rate, "%", sep="")
+scaled_goal <- round(denominator*goal_rate, 1)
+
+
+
 ```
 
 <!-- CARD 7A -->
@@ -38,6 +52,8 @@ recipient <- 'p5'
 Dear Alex,
 
 You are not a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
+
+Your performance was `r performance_percent` (`r numerator`/`r denominator`), below the peer average of 90% (`r scaled_goal`/`r denominator`).
 
 \signoff
   
