--- a/cards/card16.Rmd
+++ b/cards/card16.Rmd
@@ -33,6 +33,8 @@ goal_rate <- 0.90
 filter <- data$id == recipient & data$time == max(data$time)
 numerator <- data[filter,'numer'][[1]]
 denominator <- data[filter,'denom'][[1]]
+performance_percent <- paste(round(numerator/denominator, 3)*100, "%", sep="")
+
 # Scale goal to observed denominator.  Truncate to single decimal place
 goal_percent <- paste(100*goal_rate, "%", sep="")
 scaled_goal <- round(denominator*goal_rate, 1)
@@ -47,7 +49,7 @@ Dear Alex,
 
 You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
-This month your performance was `r numerator`/`r denominator`, below the goal of 90% (`r scaled_goal`/`r denominator`).
+This month your performance was `r performance_percent` (`r numerator`/`r denominator`), below the goal of 90% (`r scaled_goal`/`r denominator`).
 
 \signoff
   
